# gxtmaker

./: .gitattributes  .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: assembler.c  assembler.h  compiler.c  compiler.h  errwarn.c  errwarn.h  gxt.c  gxt.h  gxtas.h  gxtmaker.h  io.c  io.h  list.c  list.h  main.c
test/gta3/ios/: american.gxt  french.gxt  german.gxt  italian.gxt  japanese.gxt  spanish.gxt
test/gta3/ios/src/: JapaneseNoBreak.txt  JapanesePunctuation.txt  american.txt  english.txt  french.txt  german.txt  italian.txt  spanish.txt
test/gta3/simple/: basic_text.txt
